# PIPBONG

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  vcpkg.json  빌드.bat  실행.bat
.cursor/rules/: ai-governance.mdc  alt-tab-hotkey-foreground.mdc  app-profiling.mdc  app-spike-profiling.mdc  app-stutter-profiling.mdc  brief-korean-replies.mdc  build-policy.mdc  changelog-versioning.mdc  cursor-stutter-profiling.mdc  drag-adjust-numeric-input.mdc  dual-cursor-isolation.mdc  explain-before-fix.mdc  f5-build-and-run.mdc  ide-build-workflow.mdc  immediate-handover.mdc  list-column-header-resize.mdc  no-full-rebuild.mdc  physical-keyboard-preservation.mdc  program-settings-dialog.mdc  qt-changeevent-stylesheet.mdc  screen-capture-overlay.mdc  settings-edit-dialog-layout.mdc  static-single-exe-build.mdc  targeted-profiling-on-bugs.mdc  ux-regression-checklist.mdc  workflow-run-profiling.mdc
UpdateLog/: update_log.md
app-profile/: latest.md  trace.json
resources/: PIPBONG.rc  SuckbongMachine.rc  app.qrc
scripts/: analyze-app-profile.ps1  analyze-app-spike.ps1  analyze-app-stutter.ps1  analyze-cursor-stutter.ps1  analyze-feature-toggle.ps1  analyze-multi-hold.ps1  analyze-profile-switch.ps1  analyze-workflow-profile.ps1  build-and-run.ps1  build-common.ps1  build-release.ps1  create-github-release.ps1  deploy-qt.ps1  ensure-dev-isolation.ps1  fetch-poe2db-ko-names.py  fix-pipbong-cursor-f5.ps1  list-unmapped-ko.py  package-release.ps1  patch-unmapped-ko.py  probe-poeninja-types.py  recover-ide-build.ps1  regroup-update-log.py  run-policy-sim-postbuild.ps1  run-policy-sim.ps1  scrape-poeninja-html.py  scrape-poeninja-js.py  sync-update-log.py
src/: main.cpp
src/app/: Application.cpp  Application.h  ClickContinuousInputHotkeySettings.cpp  ClickContinuousInputHotkeySettings.h  ClickCursorHotkeySettings.cpp  ClickCursorHotkeySettings.h  FeatureHotkeyGate.cpp  FeatureHotkeyGate.h  FeatureLibraryManager.cpp  FeatureLibraryManager.h  FeatureRunSession.h  HotkeyManager.cpp  HotkeyManager.h  MainWindow.cpp  MainWindow.h  MouseCenterLock.cpp  MouseCenterLock.h  PerfTrace.cpp  PerfTrace.h  PipbongVersion.h.in  PointerFeedbackSettings.cpp  PointerFeedbackSettings.h  ProfileForegroundSync.cpp  ProfileForegroundSync.h  ProfileManager.cpp  ProfileManager.h  ProgramSettings.cpp  ProgramSettings.h  SbmVersion.h.in  SessionRunPolicy.cpp  SessionRunPolicy.h  SessionRunPolicyInvariants.cpp  SessionRunPolicyInvariants.h  TargetWindowCenterPin.cpp  TargetWindowCenterPin.h  TemplateCaptureHotkeySettings.cpp  TemplateCaptureHotkeySettings.h  UpdateChecker.cpp  UpdateChecker.h  UserInputInterruptMonitor.cpp  (+5 more)
src/core/: RunWarmup.cpp  RunWarmup.h
src/core/capture/: ClickContinuousInputRecorder.cpp  ClickContinuousInputRecorder.h  CursorPositionPicker.cpp  CursorPositionPicker.h  DxgiScreenCapture.cpp  DxgiScreenCapture.h  ScreenCapture.cpp  ScreenCapture.h  WindowPicker.cpp  WindowPicker.h
src/core/diagnostics/: AppSpikeProfiler.cpp  AppSpikeProfiler.h  AppStutterProfiler.cpp  AppStutterProfiler.h  CpuCulpritAnalyzer.cpp  CpuCulpritAnalyzer.h  CpuMonitorTypes.h  CpuMonitorWorker.cpp  CpuMonitorWorker.h  CpuSpikeDetector.cpp  CpuSpikeDetector.h  CrashManifestBuilder.cpp  CrashManifestBuilder.h  CrashReportSystemInfo.cpp  CrashReportSystemInfo.h  CrashReporter.cpp  CrashReporter.h  CursorStutterProfiler.cpp  CursorStutterProfiler.h  DiagnosticHub.cpp  DiagnosticHub.h  FeatureToggleProfiler.cpp  FeatureToggleProfiler.h  MultiHoldProfiler.cpp  MultiHoldProfiler.h  ProcessCpuSampler.cpp  ProcessCpuSampler.h  ProfileSwitchProfiler.cpp  ProfileSwitchProfiler.h  SystemCpuSampler.cpp  SystemCpuSampler.h  Win32StackWalker.cpp  Win32StackWalker.h  WorkflowProfileSnapshot.cpp  WorkflowProfileSnapshot.h  WorkflowRunProfiler.cpp  WorkflowRunProfiler.h
src/core/input/: HotkeyBinding.cpp  HotkeyBinding.h  InputSimulator.cpp  InputSimulator.h
src/core/poeninja/: CurrencyNameKo.cpp  CurrencyNameKo.h  EconomyNameKo.cpp  EconomyNameKo.h  EconomyNameKoData.inc  PoeNinjaClient.cpp  PoeNinjaClient.h  PoeNinjaEconomyCategories.cpp  PoeNinjaEconomyCategories.h  PoeNinjaTypes.h
src/core/vision/: ImageMatcher.cpp  ImageMatcher.h  TemplateCache.cpp  TemplateCache.h  TemplateCaptureMetadata.cpp  TemplateCaptureMetadata.h
src/core/workflow/: Block.h  BlockFactory.cpp  BlockFactory.h  ExecutionContext.cpp  ExecutionContext.h  HoldKeyTapMultiplexer.cpp  HoldKeyTapMultiplexer.h  HoldKeyTapRunner.cpp  HoldKeyTapRunner.h  LoopExitCondition.cpp  LoopExitCondition.h  Workflow.cpp  Workflow.h  WorkflowEngine.cpp  WorkflowEngine.h  WorkflowLoopRegion.cpp  (+3 more)
src/model/: Feature.cpp  Feature.h  FeatureCaptureTargetScope.cpp  FeatureCaptureTargetScope.h  FeatureRunMode.cpp  FeatureRunMode.h  Project.cpp  Project.h  TriggerListAnimationSettings.cpp  TriggerListAnimationSettings.h  UserInputInterruptMode.cpp  UserInputInterruptMode.h
src/storage/: JsonSerializer.cpp  JsonSerializer.h  ProfileMemoStore.cpp  ProfileMemoStore.h  ProjectPackage.cpp  ProjectPackage.h
src/tools/: SessionRunPolicySim.cpp
src/ui/: AppHelpDialog.cpp  AppHelpDialog.h  BlockListIfDisplay.h  BlockListRowMeta.h  BlockListWidget.cpp  BlockListWidget.h  ClickPointerFeedbackRenderer.cpp  ClickPointerFeedbackRenderer.h  ClickPointerFeedbackSettingsDialog.cpp  ClickPointerFeedbackSettingsDialog.h  CustomTitleBar.cpp  CustomTitleBar.h  FeatureDragMime.cpp  FeatureDragMime.h  FeatureLibraryDialog.cpp  FeatureLibraryDialog.h  FeatureLibraryListWidget.cpp  FeatureLibraryListWidget.h  FeatureListPanel.cpp  FeatureListPanel.h  FeatureListWidget.cpp  FeatureListWidget.h  FeatureRunModeTheme.cpp  FeatureRunModeTheme.h  HotkeyBindingIcon.cpp  HotkeyBindingIcon.h  LogPanelWidget.cpp  LogPanelWidget.h  OpenCvQtUtil.cpp  OpenCvQtUtil.h  ProfileEditDialog.cpp  ProfileEditDialog.h  ProfileListWidget.cpp  ProfileListWidget.h  ProgramSettingsDialog.cpp  ProgramSettingsDialog.h  TargetWindowBindingRole.h  TargetWindowDetailPanel.cpp  TargetWindowDetailPanel.h  TargetWindowHighlightOverlay.cpp  (+24 more)
src/updater/: main.cpp
(+121 files in other folders)
